# home-library

./: .dockerignore  .env.example  .gitignore  README.md  all-books.csv  docker-compose-pi.yml  docker-compose.yaml  docker-compose.yml  pi-deploy.sh
.github/: CI.md
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  backup.sh  e2e-seed.sql  entrypoint.sh  test.db
backend/.sqlx/: query-077313a410c34aefda55a7c33dd1e0143f3a1e090c7c0c64ea7284e1f61fb6dd.json  query-0b0adec1766a99b6cac4f65b3f647982d46f1515ad4ecf0e2908bd612b0e3208.json  query-0b21e7ca5f369260aba3b561a570561bf59d2a04c229cb9776289669a128636d.json  query-0e59894f81a8273f15b00daac6d213ebf17630e3a443af4222951259bf571481.json  query-0f32a5ad83242b350df4eaf396a56fca91c1d228e90cfaa52a922640d599dc9b.json  query-106ddd4422d76673557aa2d9ff1e9818ef52b0a6fd42e21f2ea141212b7c22de.json  query-116b4fd21b3ada2a31fe05d64a039bc74d67e4c844cae0a90926071971536323.json  query-126733e0dca59c77b9680c6cdfa8fc6f0505513376edc68399b1a22e06cf1b44.json  query-13b240d5d379023ef77f0841322d3d06933c7df177445ef4a70ea1e2081cc9f2.json  query-15de91ebf8ac3867a3c1b3cc2c53a54603b94ae6ca8685f1f0ff21b8679d331f.json  query-15f51663257598f5c7f8663b1d058f73e7e53d7c6f36ce52b65bc58482cea7b4.json  query-16be030701c981bcef36ae62c168a175ab16db684a67b61472b28f0c5f1d6ca0.json  query-1e9e61f88e11c97f6732b7dca0b67ac32bc535f066b85bf13b63848151e970aa.json  query-1f75a5ca25698ff4d4ddc182eea7a549c233da411d052f825ac908fb68444c89.json  query-216f780db749c3d75a3deb81ca2bb2f7d5adc0d6264139ae06327142acb0f1e1.json  (+85 more)
backend/migrations/: 20250721035040_initial_schema.sql  (+14 more)
(+186 files in other folders)
