[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = "1.0.219"
serde_derive = "1.0.219"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "tls-native-tls", "macros"] }
tokio = {version = "1.46.1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

