[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_derive = "1.0.219"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "tls-native-tls", "macros", "chrono"] }
tokio = {version = "1.46.1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.4"

